<resources>
    <string name="app_name">OnlineChat</string>
    <string name="login">Login</string>
    <string name="message">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">avatar</string>
    <string name="account">Account</string>
    <string name="user_id">User ID</string>
    <string name="add_friend">Add Friend</string>
    <string name="outline">Outline</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="file">File</string>
    <string name="warring">Warring!!</string>
    <string name="clear_db_warring">Change user will delete all of the message!\nContinue?</string>
    <string name="warring_blank_msg">Do not send blank text</string>
    <string name="error_cannot_open">Can not open this file</string>
    <string name="error_user_id_illegal">User ID illegal</string>
    <string name="error_add_friend_error">Add Friend Error!</string>
    <string name="warring_at_least_one_friend">Please select at least one friend</string>
</resources>
