<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/friend_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_person_48dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/friend_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/friend_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outline"
            android:textSize="14sp" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/friend_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="10dp" />

</LinearLayout>
